# ssz_types

./: Cargo.toml
src/: bitfield.rs  fixed_vector.rs  lib.rs  variable_list.rs
src/serde_utils/: quoted_u64_fixed_vec.rs  quoted_u64_var_list.rs
