[package]
name = "ssz_types"
version = "0.5.4"
edition = "2021"
description = "List, vector and bitfield types for SSZ"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sigp/ssz_types"
documentation = "https://docs.rs/ssz_types"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
tree_hash = { git = "https://github.com/unionlabs/tree_hash", branch = "use-unionlabs-ssz" }
ethereum_ssz = { git = "https://github.com/unionlabs/ethereum_ssz", branch = "vec-isnt-valid-ssz", default-features = false }
ethereum_serde_utils = "0.5.0"
serde = "1.0.0"
serde_derive = "1.0.0"
typenum = { version = "1.12.0", features = ["const-generics"] }
derivative = "2.1.1"
smallvec = "1.8.0"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
itertools = "0.10.0"

[dev-dependencies]
serde_json = "1.0.0"
